reorganized TranslateConfig, account design tweak
Moved profile name, username, and avatar to left side of page in line
with the account tabs

--- a/src/main/webapp/app/components/about/TermsPartial.html
+++ b/src/main/webapp/app/components/about/TermsPartial.html
@@ -2,7 +2,7 @@
 
 <div>
     <!-- class="col-offset-2 col-span-8" -->
-    <h1 translate="tatami.menu.about.tos"></h1>
+    <h1 translate="tatami.home.menu.about.tos"></h1>
     <h2>1 - General</h2>
     <ol>
         <li>By using any of the Ippon Technologies products, software, or services available at *.ippon.fr (collectively referred to as "Services") provided by Ippon Techonologies ("Ippon"), you agree to be bound by the following terms and conditions ("Terms of Service").</li>
