--- a/src/main/webapp/app/components/account/password/PasswordView.html
+++ b/src/main/webapp/app/components/account/password/PasswordView.html
@@ -2,23 +2,23 @@
     <div class="alert alert-status">
         <div>
             <form class="form-horizontal row-fluid">
-                <h2 translate="tatami.password.title"></h2>
+                <h2 translate="tatami.account.password.title"></h2>
                 <fieldset>
-                    <legend translate="tatami.password.update"></legend>
+                    <legend translate="tatami.account.password.update"></legend>
                     <div class="control-group">
-                        <label class="control-label" translate="tatami.password.old"></label>
+                        <label class="control-label" translate="tatami.account.password.old"></label>
                         <div class="controls">
                             <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.oldPassword">
                         </div>
                     </div>
                     <div class="control-group">
-                        <label class="control-label" translate="tatami.password.new"></label>
+                        <label class="control-label" translate="tatami.account.password.new"></label>
                         <div class="controls">
                             <input type="password" required="required" ize="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPassword">
                         </div>
                     </div>
                     <div class="control-group">
-                        <label class="control-label" translate="tatami.password.confirm"></label>
+                        <label class="control-label" translate="tatami.account.password.confirm"></label>
                         <div class="controls">
                             <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPasswordConfirmation">
                         </div>
