--- a/src/main/webapp/app/components/account/users/UsersView.html
+++ b/src/main/webapp/app/components/account/users/UsersView.html
@@ -4,19 +4,19 @@
             <div class="tabMenu">
                 <ul class="nav nav-tabs">
                     <li ng-class="{ 'active': $state.current.name === 'account.users' }">
-                        <a ui-sref="account.users" translate="tatami.users.myFriends"></a>
+                        <a ui-sref="account.users" translate="tatami.account.users.myFriends"></a>
                     </li>
                     <li ng-class="{ 'active': $state.current.name === 'account.users.recommended' }">
-                        <a ui-sref="account.users.recommended" translate="tatami.users.recommend"></a>
+                        <a ui-sref="account.users.recommended" translate="tatami.account.users.recommend"></a>
                     </li>
                     <li ng-class="{ 'active': $state.current.name === 'account.users.search' }">
-                        <a ui-sref="account.users.search" translate="tatami.users.search"></a>
+                        <a ui-sref="account.users.search" translate="tatami.account.users.search"></a>
                     </li>
                 </ul>
             </div>
             <div>
                 <form class="row-fluid littleMargeBot">
-                    <input ng-show="$state.current.name === 'account.users.search'" ng-model="current.searchString" ng-trim="false" ng-change="search()" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="Enter your search">
+                    <input ng-show="$state.current.name === 'account.users.search'" ng-model="current.searchString" ng-trim="false" ng-change="search()" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="{{ 'tatami.account.users.search' | translate }}">
                 </form>
                 <div class="useritem" ng-repeat="user in usersGroup">
                     <div class="pull-left background-image-fffix">
