--- a/src/main/webapp/app/components/account/preferences/PreferencesView.html
+++ b/src/main/webapp/app/components/account/preferences/PreferencesView.html
@@ -2,29 +2,29 @@
     <div class="alert alert-status">
         <div>
             <form class="form-horizontal row-fluid">
-                <h2 translate="tatami.preferences.title"></h2>
-                <legend translate="tatami.preferences.notifications"></legend>
+                <h2 translate="tatami.account.preferences.title"></h2>
+                <legend translate="tatami.account.preferences.notifications"></legend>
                 <div class="control-group">
                     <div class="controls">
                         <label class="checkbox">
-                        <input name="mentionEmail" type="checkbox" ng-model="prefs.mentionEmail" ng-checked="prefs.mentionEmail">{{ 'tatami.preferences.notification.email.mention' | translate }}
+                        <input name="mentionEmail" type="checkbox" ng-model="prefs.mentionEmail" ng-checked="prefs.mentionEmail">{{ 'tatami.account.preferences.notification.email.mention' | translate }}
                         </label>
                     </div>
                     <div class="controls">
                         <label class="checkbox">
-                        <input name="dailyDigest" type="checkbox" ng-model="prefs.dailyDigest" ng-checked="prefs.dailyDigest"> {{ 'tatami.preferences.notification.email.dailyDigest' | translate }}
+                        <input name="dailyDigest" type="checkbox" ng-model="prefs.dailyDigest" ng-checked="prefs.dailyDigest"> {{ 'tatami.account.preferences.notification.email.dailyDigest' | translate }}
                         </label>
                     </div>
                     <div class="controls">
                         <label class="checkbox">
-                        <input name="weeklyDigest" type="checkbox" ng-model="prefs.weeklyDigest" ng-checked="prefs.weeklyDigest"> {{ 'tatami.preferences.notification.email.weeklyDigest' | translate }}
+                        <input name="weeklyDigest" type="checkbox" ng-model="prefs.weeklyDigest" ng-checked="prefs.weeklyDigest"> {{ 'tatami.account.preferences.notification.email.weeklyDigest' | translate }}
                         </label>
                     </div>
                     <div class="controls">
                         <label class="checkbox">
-                        <input name="rssUidActive" type="checkbox" ng-model="prefs.rssUidActive" ng-checked="prefs.rssUidActive"> {{ 'tatami.preferences.notification.rss.timeline' | translate }}
+                        <input name="rssUidActive" type="checkbox" ng-model="prefs.rssUidActive" ng-checked="prefs.rssUidActive"> {{ 'tatami.account.preferences.notification.rss.timeline' | translate }}
                         </label>
-                        <a ng-if="prefs.rssUidActive" href="/tatami/syndic/{{prefs.rssUid}}">{{ 'tatami.preferences.notification.rss.link' | translate }}</a>
+                        <a ng-if="prefs.rssUidActive" href="/tatami/syndic/{{ prefs.rssUid }}">{{ 'tatami.account.preferences.notification.rss.link' | translate }}</a>
                     </div>
                 </div>
                 <fieldset>
