--- a/src/main/webapp/app/components/home/timeline/TimelinePartial.html
+++ b/src/main/webapp/app/components/home/timeline/TimelinePartial.html
@@ -34,7 +34,7 @@
                         <!-- Put discussion class if discussion ? -->
                         <div class="tatam pointer tatam-border-lr tatam-hover tatam-id-{{ status.statusId }}" style="display: block;">
                             <!--<div id="before"></div>-->
-                            <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false" ng-class="{ 'favorite': status.favorite, 'share': status.shareByMe }">
+                            <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false" ng-class="{ 'favorite': status.favorite, 'share': status.shareByMe, 'both': status.favorite && status.shareByMe }">
                                 <div class="pull-left background-image-fffix statusitem-img">
                                     <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + status.avatarURL + ')' }"></div>
                                 </div>
